src/test/ui/impl-trait/issue-86465.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/issue-86465.rs:6:5
   |
LL |     (a, a)
   |     ^^^^^^ expected `&'a u32`, got `&'b u32`
   |
note: previous use here
  --> $DIR/issue-86465.rs:6:5
   |
LL |     (a, a)
   |     ^^^^^^

error: aborting due to previous error

